style.css
html, body{
    height: 100%;
}


.patterns {
    width: 100vw;
    height: 100vw;
}

.pt1 {
    background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='17' height='17' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(247, 250, 252,1)'/%3E%3Cpath d='M-20 31l20-20l20 20l20-20l20 20l20-20l20 20v-2l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20zM-20-9l20-20l20 20l20-20l20 20l20-20l20 20v-2l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20zM-20 71l20-20l20 20l20-20l20 20l20-20l20 20v-2l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20z ' fill='rgba(195, 218, 254,1)'/%3E%3Cpath d='M0 34.5l20-20l20 20l20-20l20 20l20-20l20 20v-1l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20zM0-5.5l20-20l20 20l20-20l20 20l20-20l20 20v-1l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20zM0 74.5l20-20l20 20l20-20l20 20l20-20l20 20v- 1l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20z ' fill='rgba(214, 188, 250,1)'/%3E%3Cpath d='M-20 31l20-20v-2l-20 20zM20 31l20-20v-2l-20 20z' fill='rgba(195, 218, 254,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
}

.dropdown{
    margin-top: 8px;
    margin-left: 8px;
    text-align: right; 
    position: fixed; 
    top:0; 
}

.dropdown-menu{
    background-color: light purple;
}

.fa-solid{
    color: #000000;
    font-size: 2em;
    margin-left: 15%;
}

.btn-secondary {
    color: transparent; 
    background-color: transparent; 
    border-color:transparent;  
    padding:0%;
    margin: 0; 
}

#dropdownMenuButton{
    color: transparent; 
    background-color: transparent; 
    border-color:transparent;  
}

.btn{
    padding: 0%;
    margin-right: 1%;
}

@keyframes float {
    0% {
        box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
        transform: translatey(0px);
    }
    50% {
        box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
        transform: translatey(-12px);
    }
    100% {
        box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
        transform: translatey(0px);
    }
}

.container{
    box-shadow: 0 5px 15px 0px;
    transform: translatey(0px);
    animation: float 5s ease-in-out infinite;
} 

.container1{
    border-radius: 25%;
    width: 80%;
    overflow: hidden;
    background-color: #b9b3e8d3;
    
}
.opening{
    margin-top: 5%;
    margin-bottom: 1%;
}

.intro{
    text-align: center;
    font-family: 'Lilita One', cursive;
    color: rgb(57, 54, 60);
}

#first{
    font-size: 2.5em;
    opacity: 1.0;
}

.intro2{
    margin-top: 2%;
    text-align: center;
    font-family: 'Passion One', cursive;
    color: rgb(51, 49, 55);
}
#second{
    font-size: 1.5em;
}

.headshot{
    margin-top: 1%;
    width: 35%;
    min-width: 200px;;
    border-radius: 20%;
    height: 80%;
    margin-bottom: 3%;
}

#contact{
    max-width: 1000px;
    margin: 0 auto;
    margin-top: 2%;
    display: grid;
    gap: 2.0rem;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.links{
    width: auto;
    margin-right: 6%;
    margin-left: 6%;
    background-color: rgba(63, 137, 255, 0.821);
    color: white;
    padding: 1rem;
    height: 5rem;
    border-radius: 30%;
    position: relative;
}

.connect{    
    position: absolute;
    top: 50%;
    left: 25%;
    transform: translate(-50%, -50%);
    font-family: 'Passion One', cursive;
    font-size: 2rem;
    color: rgb(58, 58, 58);
}

.icon{
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    font-size: 2.3rem;
    color: rgb(58, 58, 58);
}

.github{
    left: 48%;
}

.linkedin {
    left: 64%;
}

.email{
    left: 67%;
}

.resume{
    width: auto;
    margin-right: 6%;
    margin-left: 6%;
    border-radius: 30%;
    height: 5rem;
    background-color: rgba(230, 139, 206, 0.843);
    color: rgb(48, 46, 46);
    padding: 1rem;
    gap: 3rem;
    position: relative;
}

.downloadres{
    position: absolute;
    top: 50%;
    left: 40%;
    transform: translate(-50%, -50%);
    font-family: 'Passion One', cursive;
    font-size: 2rem;
    color: rgb(58, 58, 58);
    white-space: nowrap
}

.arrow{
    left: 67%;
}

.aboutme{
    display: grid;
    grid-template-columns: 1fr 2fr;
    height: auto%;
    background-color: #39dacad1;
    margin-top: 4%;
    margin-right: 10%;
    margin-left: 10%;
    border-radius: 10%;
    box-shadow: 0 5px 15px 0px;
}

.aboutme:hover{
    transform: scale(1.1);
}

.secondimg {
    display: block;
    margin: auto;
    margin-top: 5%;
    width: 80%;
    padding: 8%;
}

.aboutitle {
    margin-top: 4%;
    font-family: 'Lilita One', cursive;
    font-size: 2.2rem; 
    margin-bottom: 4%;
}

.abouttext{
    margin-right: 3%;
    padding: 10px;
}

.aboutinfo {
    font-family: 'Raleway', sans-serif;
    width: fit-content;
    margin-bottom: 1em;
}

.side-projects{
    background-color: rgba(243, 167, 81, 0.76);
    margin-right: 20%;
    margin-left: 20%;
    margin-top: 5%;
    padding: 8px;
    border-radius: 35%;
    text-align: center;
    box-shadow: 0 5px 15px 0px;
} 

.spcontainer{
    margin-top: 2%; 
    margin-bottom: 1%; 
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    margin-left: 15%;
    margin-right: 15%;
}

.sptitle{
    font-family: 'Patua One', cursive;
    text-align: center;
}

@keyframes bounce2 {
    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
    40% {transform: translateY(-25px);}
    60% {transform: translateY(-10px);}
}

.fa-angle-down{
    color: black;
    animation: bounce2 2s ease infinite;
}

.task-list{
    background-color: #9397edd2;
    border-radius: 20%;
    padding: 8px;
    margin-top: 4%;
    margin-right: 35%; 
    margin-left: 5%; 
    display: grid;
    grid-template-columns: 1fr 2fr;
    box-shadow: 0 5px 15px 0px;
    min-width: 500px;
}

.tlcontainer2{
    margin-top: 5%;
    height: 60%;
    display: grid;
    grid-template-rows: repeat(1fr);
}

.tlcontainer{
    margin-top: 6%;
    width: 18%;
    margin-left: 15%; 
    white-space: nowrap;
}

.tlchild{
    display: inline-block;
}

.sptitle{
    margin-top: 5%;
    font-family: 'Patua One', cursive;
    font-size: 2rem;
}

.fa-arrow-up-right-from-square:hover {
    transform: scale(1.35);
}

a, a:visited, a:active {
    color: inherit;
    text-decoration: none;
}

.sptext{
    font-family: 'Raleway', sans-serif;
}

.sptexttl{
    margin-left: 15%; 
    font-size: 1.1rem;
}

.languages{
    font-family: 'Fira Code', monospace;
}

.languagestl{
    margin-left: 15%; 
}

.lct-website{
    background-color: #e29fd8d2;
    border-radius: 20%;
    padding: 8px;
    margin-top: 4%;
    margin-left: 25%; 
    margin-right: 4%; 
    padding-bottom: 4%;
    display: grid;
    grid-template-columns: 1fr 2fr;
    box-shadow: 0 5px 15px 0px;
    min-width: 500px;
}

.tldemo{
    display: flex;
    justify-content: center; 
    margin-top: 6%;
    height: 85%;
}

.tlgif{
    background-color: #fff;
    padding: 4px; 
    border-radius: 6%;
}

.cat-finder{
    background-color: #34dda8d2;
    border-radius: 20%;
    padding: 8px;
    margin-top: 4%;
    margin-left: 25%; 
    margin-right: 4%; 
    padding-bottom: 4%;
    display: grid;
    grid-template-columns: 1fr 2fr;
    box-shadow: 0 5px 15px 0px;
    min-width: 500px;
}

.cfcontainer2{
    margin-top: 5%;
    height: 60%;
    display: grid;
    grid-template-rows: repeat(1fr);
}

.cfcontainer{
    margin-top: 6%;
    width: 18%;
    margin-left: 15%; 
    white-space: nowrap;
}

.cfchild{
    display: inline-block;
}

.sptextcf{
    margin-top: -5%;
    margin-left: 15%; 
    font-size: 1.1rem;
}

.languagescf{
    margin-left: 15%; 
}


.cfdemo{
    display: flex;
    justify-content: center; 
    margin-top: 6%;
    width: auto;
}

.cfgif, .lwgif{
    background-color: rgb(89, 86, 86);
    padding: 4px; 
    border-radius: 6%;
    width: 80%;
}

@media screen and (max-width: 1000px){
    .task-list{
        min-width:auto;
        margin-right: 5%;
    }

    .tldemo, .cfdemo{
        margin-top: 0%;
        margin-bottom: 5%;
        height: 200px;
    }

    .tlcontainer2, .cfcontainer2{
        text-align: centre;
        margin-right: 0%;
    }

    .languagestl, .languagescf{
        text-align: center;
        margin-left: 0%;
    }

    .sptexttl{
        font-size: 1.0rem;
        margin-left: 0;
        text-align: center;
    }

    .sptextcf{
        font-size: 1.0rem;
        margin-right: 0;
        text-align: center;
    }

    .cat-finder, .lct-website{
        min-width:auto;
        margin-left: 5%;
    }

    .cfdemo{
        margin-top: 15%;
    }

}

@media screen and (max-width: 480px) {
    .links, .resume {
        margin-right: 15%;
        margin-left: 15%;
        font-size: 2rem;
        height: 4rem;
    }

    .icons{
        font-size: 1.5rem;
    }

    .github{
        left: 48%;
    }
    
    .linkedin {
        left: 67%;
    }
    
    .email{
        left: 71%;
    }

    .arrow{
        left: 69%;
    }

    .connect, .downloadres{
        font-size: 1.5rem;
    }

    #second{
        font-size: 1.2em;
    }

    .aboutme{
        margin-top: 8%;
    }
    .aboutitle{
        font-size: 1.4em; 
        margin-top: 4%;
    }

    .aboutinfo {
        font-size: 0.8rem;
    }

    .secondimg {
        margin-top: 50%;
        width: 110%;
    }

    .wrap{
        margin-left: -40%;
    }

    .aboutme:hover{
        transform: none;
    }

    .side-projects{
        margin-top: 8%;
        margin-bottom: 8%;
    }
    
    .sptitle, .sptitle:hover, .sptitle:visited{
        font-size: 1.6rem;
    }

    .tlcontainer, .cfcontainer{
        margin-top: 2%; 
        text-align: center;
        width: 18%;
        margin-left: 30%; 
    }

    .tlcontainer2, .cfcontainer2{
        text-align: center;
        margin-left:0%;
        margin-right: 0%;
    }

    .tlinfo, .cfinfo{
        margin-right: 5%;
        margin-left: 5%;
    }

    .sptext{
        font-size: 0.9rem;
    }

    .task-list, .cat-finder, .lct-website{
        margin-bottom: 10%;
        grid-template-columns: 1fr;
        margin-left: 2%;
        margin-right: 2%;
    }

    .cfcontainer{
        margin-top: 2%; 
        text-align: center;
        width: 18%;
        margin-right: 30%; 
    }

    .sptextcf, .sptextcf{
        font-size: 1.0rem;
        margin-left: 0;
        text-align: center;
    }

    .cfdemo{
        margin-top: 4%;
    }

    .cfgif{
        width: 85%;
    }

    .lwgif{
        width: 60%;
    }

}

